# s3strata

s3strata-py/: .flake8  .gitignore  .ruff.toml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
s3strata-py/examples/: sqlalchemy_adapter.py
s3strata-py/s3strata/: __init__.py  config.py  file_manager.py  objectstore.py  types.py
s3strata-py/tests/: __init__.py  test_config.py  test_types.py
s3strata-ts/: .gitignore  CHANGELOG.md  MULTI_ENDPOINT.md  PRISMA_SETUP.md  README.md  biome.json  package.json  tsconfig.json  tsup.config.ts
s3strata-ts/src/: config.ts  constants.ts  index.ts
s3strata-ts/src/examples/: minio-test.ts  prisma-adapter.ts  usage-example.ts
s3strata-ts/src/services/: file-manager.ts  objectstore.ts
s3strata-ts/src/types/: file-visibility.ts  index.ts  options.ts  orphan.ts  physical-file.ts  storage-adapter.ts  storage-tier.ts
