[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3strata"
version = "1.5.0"
description = "Object storage abstraction layer with dual-bucket tiered storage and visibility control for Python"
readme = "README.md"
authors = [
    { name = "Siwat Sirichai" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/SiwatINC/s3strata"
Repository = "https://github.com/SiwatINC/s3strata"
Issues = "https://github.com/SiwatINC/s3strata/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*"]
ignore_missing_imports = true
